feat: internalize web search
